--- a/resources/css/bootstrap.css
+++ b/resources/css/bootstrap.css
@@ -1,82 +1,46 @@
-@tailwind base;
-
 :root {
     --white: #fff;
-    --black: #0b2642;
-    --backdrop: rgba(0, 0, 0, 0.75);
+    --black: #000;
 
-    --blue-50: #efedf3;
-    --blue-100: #e0daee;
-    --blue-200: #c9baf0;
-    --blue-300: #a688f1;
-    --blue-400: #8358f0;
-    --blue-500: #682df9;
-    --blue-600: #4c17d1;
-    --blue-700: #390fa1;
-    --blue-800: #280b72;
-    --blue-900: #1b074b;
+    --blue-300: #b6d9e9;
+    --blue-400: #599bcc;
+    --blue-500: #005ba6;
 
-    --green-100: #ebf9ea;
-    --green-200: #c7f0bf;
-    --green-300: #b6e4b3;
-    --green-400: rgb(135, 202, 138);
-    --green-500: #5bba64;
-    --green-600: #429b59;
-    --green-700: #337c4d;
-    --green-800: #235c41;
-    --green-900: #133d35;
+    --spatie-500: #197593;
+    --spatie-600: #004e6e;
 
-    --orange-100: #fcf5d4;
-    --orange-200: #fcd99f;
-    --orange-300: #f6cc6e;
-    --orange-400: #fdaa3e;
-    --orange-500: #f9933a;
-    --orange-600: #da9215;
-    --orange-700: #995218;
-    --orange-800: #74431b;
-    --orange-900: #4f331d;
+    --green-300: #8ce6dc;
+    --green-400: #4cc3bd;
+    --green-500: #009183;
+    --green-600: #00625f;
+    --green-700: #004740;
 
-    --red-100: #f0e7e6;
-    --red-200: #f0d2d1;
-    --red-300: #de9fa6;
-    --red-400: #cc6875;
-    --red-500: #cc344c;
-    --red-600: #a93147;
-    --red-700: #862f42;
-    --red-800: #632c3d;
-    --red-900: #402938;
+    --orange-400: #ec9370;
+    --orange-500: #ee5e24;
 
-    --gray-100: #f8f7f6;
-    --gray-200: #e5e3e1;
-    --gray-300: #b8b5b0;
-    --gray-400: #918f8b;
-    --gray-500: #6b6a67;
-    --gray-600: #575654;
-    --gray-700: #4f4e4c;
-    --gray-800: #3d3c3b;
-    --gray-900: #242323;
+    --yellow-400: #e5d292;
+    --yellow-500: #fcc80f;
 
-    --light-100: rgba(255, 255, 255, 0.1);
-    --light-200: rgba(255, 255, 255, 0.2);
-    --light-300: rgba(255, 255, 255, 0.3);
-    --light-400: rgba(255, 255, 255, 0.4);
-    --light-500: rgba(255, 255, 255, 0.5);
-    --light-600: rgba(255, 255, 255, 0.6);
-    --light-700: rgba(255, 255, 255, 0.7);
-    --light-800: rgba(255, 255, 255, 0.8);
-    --light-900: rgba(255, 255, 255, 0.9);
+    --red-100: #f9f5f4;
+    --red-200: #f7e3dc;
+    --red-300: #efbdb9;
+    --red-400: #e1897b;
+    --red-500: #e92128;
+    --red-600: #941b23;
+    --red-700: #321414;
 
-    --dark-50: rgba(22, 11, 66, 0.05);
-    --dark-100: rgba(22, 11, 66, 0.1);
-    --dark-200: rgba(22, 11, 66, 0.2);
-    --dark-300: rgba(22, 11, 66, 0.3);
-    --dark-400: rgba(22, 11, 66, 0.4);
-    --dark-500: rgba(22, 11, 66, 0.5);
-    --dark-600: rgba(22, 11, 66, 0.6);
-    --dark-700: rgba(22, 11, 66, 0.7);
-    --dark-800: rgba(22, 11, 66, 0.8);
-    --dark-900: rgba(22, 11, 66, 0.9);
-    --dark-950: rgba(19, 8, 57, 0.95);
+    --gray-100: #e8f4f7;
+    --gray-200: #deecef;
+    --gray-300: #c2d7db;
+    --gray-400: #a5b6ba;
+    --gray-500: #93a4a8;
+    --gray-600: #798689;
+    --gray-700: #586264;
+    --gray-800: #2b2f30;
+}
+
+* {
+    position: relative;
 }
 
 html {
@@ -96,22 +60,3 @@ html {
     }
 }
 
-/* Exclude iframes like 1Password save modals */
-*:not(iframe),
-*:after,
-*:before {
-    position: relative;
-}
-
-*:focus {
-    outline: 0 !important;
-}
-
-body {
-    @apply font-sans;
-    @apply text-black;
-    @apply leading-normal;
-    @apply w-full;
-
-    font-feature-settings: "ss01" 1;
-}
