--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,27 @@
 @import "tailwindcss/components";
 
 @import "tailwindcss/utilities";
+
+@responsive {
+    .fix-z {
+        transform: translateZ(1px);
+    }
+}
+
+.blend-multiply {
+    mix-blend-mode: multiply;
+}
+
+.aspect-16x9 {
+    padding-bottom: 56.25%;
+}
+
+.aspect-16x9 iframe {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
