Layout one-pager

--- a/resources/css/bootstrap.css
+++ b/resources/css/bootstrap.css
@@ -27,7 +27,7 @@
     --red-200: #f7e3dc;
     --red-300: #efbdb9;
     --red-400: #e1897b;
-    --red-500: #d71d23;
+    --red-500: #e92128;
     --red-600: #941b23;
     --red-700: #321414;
 
