--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,8 @@
 
 @import "tailwindcss/utilities";
 
+@import "./utilities/markup.css";
+
 @responsive {
     .fix-z {
         transform: translateZ(1px);
