--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -32,6 +32,14 @@
     height: 100%;
 }
 
+button {
+    transition: transform .3s ease;
+}
+
+button:hover {
+    transform: translateY(-1px);
+}
+
 button:active {
     transform: translateY(1px);
 }
